[gd_scene load_steps=3 format=3 uid="uid://bgja44u2v5scd"]

[ext_resource type="Script" uid="uid://bcbr06byj07y8" path="res://Scripts/upgrades.gd" id="1_6ahmb"]
[ext_resource type="Texture2D" uid="uid://ff4mqbqitjxe" path="res://Sprites/UpgradeBackground.png" id="2_jiyet"]

[node name="Upgrades" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_6ahmb")

[node name="UpgradeBackground" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("2_jiyet")

[node name="ButtonManager" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Back" type="Button" parent="ButtonManager"]
layout_mode = 0
offset_left = 744.0
offset_top = 119.0
offset_right = 903.0
offset_bottom = 196.0
text = "BaCk"

[node name="Health" type="Button" parent="ButtonManager"]
layout_mode = 0
offset_left = 150.0
offset_top = 598.0
offset_right = 215.0
offset_bottom = 639.0
text = "1/8"

[node name="Damage" type="Button" parent="ButtonManager"]
layout_mode = 0
offset_left = 405.0
offset_top = 599.0
offset_right = 470.0
offset_bottom = 640.0
text = "1/8"

[node name="AttackSpeed" type="Button" parent="ButtonManager"]
layout_mode = 0
offset_left = 662.0
offset_top = 598.0
offset_right = 727.0
offset_bottom = 639.0
text = "1/8"

[node name="MoveSpeed" type="Button" parent="ButtonManager"]
layout_mode = 0
offset_left = 919.0
offset_top = 598.0
offset_right = 984.0
offset_bottom = 639.0
text = "1/8"

[connection signal="pressed" from="ButtonManager/Back" to="." method="_on_back_pressed"]
